Update API URL to production backend

--- a/saree-shop-customer/.env
+++ b/saree-shop-customer/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_MAPS_KEY=AIzaSyAOXhnWS4_0kD5TuP-58tpIxHdBaRYHDVg
-REACT_APP_API_BASE_URL=http://localhost:8080/api
+REACT_APP_API_BASE_URL=https://saree-shop-backend-production.up.railway.app/api
